# osu-discussion-votes

./: .gitattributes  README.md
server/: .gitignore  README.md  pyproject.toml  run.py  schema.prisma
server-go/: .env.example  .gitignore  README.md  go.mod  go.sum  main.go
server-go/models/: setup.go  vote.go
server-go/routes/: auth.go  vote.go
server/votes_server/: __init__.py  plugins.py  types.py
server/votes_server/models/: __init__.py  user.py  vote.py
server/votes_server/routes/: auth.py  vote.py
userscript/: README.md  package-lock.json  package.json
userscript/config/: metadata.cjs  webpack.config.base.cjs  webpack.config.dev.cjs  webpack.config.production.cjs
userscript/src/: constants.ts  elements.ts  index.ts  state.ts  types.ts  utils.ts
